styles.css
* {
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
}
body {
  overflow-x: hidden;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}
/* navigation bar */
.navbar {
  position: fixed;
  margin: 0;
  top: 0;
  left: 0;
  height: 100%;
  width: 285px;
  border-right: solid grey;
  overflow-y: auto;
}
@media screen and (max-width: 890px) {
  .navbar {
    width: 100%;
    height: 285px;
    border: none;
    border-bottom: grey solid;
    background-color: white;
    z-index: 1;
  }
  a:first-of-type .nav-link {
    border-top: solid grey;
  }
}
h1 {
  text-align: center;
}
.nav-links a {
  text-decoration: none;
}
.nav-link {
  display: flex;
  width: 100%;
  height: 50px;
  border-top: solid 1px grey;
  align-items: center;
  text-indent: 1.2rem;
  color: rgb(75, 75, 75);
  font-size: 1.1rem;
  transition: background-color 0.4s;
}
.nav-link:hover {
  background: grey;
  color: white;
}

/* main article section */
main {
  width: 80vw;
  margin-left: 285px;
  padding: 1rem 2rem;
}
@media screen and (max-width: 890px) {
  main {
    margin-left: 0;
    margin-top: 285px;
  }
}
a {
  color: inherit;
}
a:hover {
  color: grey;
}
p {
  padding-left: 1rem;
}
p,
ul,
ol {
  font-size: 1.2rem;
  line-height: 1.5;
}
.root-ul {
  margin-bottom: 1rem;
}
.step {
  font-weight: bold;
  font-size: 1.3rem;
}
.card {
  width: 300px;
  margin-left: auto;
  margin-right: auto;
  border: solid lightgrey 1px;
  border-radius: 10px;
}
.card ul {
  margin-top: -19px;
  list-style: circle;
  padding-left: 60px;
}

/* tooltips */
.tooltip {
  position: relative;
  display: inline-block;
  cursor: default;
}
.tooltip a {
  text-decoration: none;
  color: inherit;
}
.tooltip a:hover {
  text-decoration: underline;
  color: inherit;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
  opacity: 1;
}

.tooltiptext {
  visibility: hidden;
  width: 160px;
  background-color: #333;
  color: #fff;
  text-align: center;
  border-radius: 8px;
  padding: 5px;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  left: 50%;
  margin-left: -80px;
  opacity: 0;
  transition: opacity 0.3s;
}

.tooltiptext::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #333 transparent transparent transparent;
}

